# schema_replicator

./: .gitignore  LICENSE  README.md  applier.py  extractor.py  pyproject.toml
schema_replicator/: __init__.py  extractor.py
